k3s/infra/docker-registry-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui-service
  namespace: docker-registry-ui
spec:
  selector:
    app: docker-registry-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
