k3s/infra/docker-registry-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ui-ingress
  namespace: docker-registry-ui
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - registry-ui.muitaconta.com.br
      secretName: docker-registry-ui-tls
  rules:
    - host: registry-ui.muitaconta.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry-ui-service
                port:
                  number: 80
